Use different version

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,8 +8,8 @@ on:
       - master
 jobs:
   compile:
-    name: MacOS 11.0
-    runs-on: macos-11.0
+    name: macOS 10.15
+    runs-on: macos-10.15
     steps:
       - uses: actions/checkout@v1
       - name: Install Rustup
