--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Install Rustup
-        run: curl https://sh.rustup.rs | sh
+        run: curl https://sh.rustup.rs -sSf | sh
       - name: Install Rust
         run: rustup toolchain install 1.47.0
       - name: Compile
