--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,9 +12,13 @@ jobs:
     runs-on: macos-10.15
     steps:
       - uses: actions/checkout@v1
-      - name: Install Rustup
-        run: curl https://sh.rustup.rs -sSf | sh -s -- -y
+      # - name: Install Rustup
+      #   run: curl https://sh.rustup.rs -sSf | sh -s -- -y
+      # - name: Install Rust
+      #   run: rustup toolchain install 1.47.0
       - name: Install Rust
-        run: rustup toolchain install 1.47.0
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: 1.47.0
       - name: Compile
         run: cargo build --release
