--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,7 +4,7 @@ on:
     branches:
       - '*'
 jobs:
-  build:
+  macos-10-15:
     name: macOS 10.15
     runs-on: macos-10.15
     steps:
@@ -20,15 +20,15 @@ jobs:
           args: --release
       - name: Create Archive
         run: |
-          zip --junk-paths dl-${{ github.ref }}-preview.zip target/release/dl
+          zip --junk-paths dl-${{ github.base_ref }}-preview.zip target/release/dl
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: ${{ github.base_ref }}
+          release_name: Release ${{ github.base_ref }}
           draft: false
           prerelease: false
       - name: Upload Release Asset
@@ -38,6 +38,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dl-${{ github.ref }}-preview.zip
-          asset_name: dl-${{ github.ref }}-preview.zip
+          asset_path: dl-${{ github.base_ref }}-preview.zip
+          asset_name: dl-${{ github.base_ref }}-preview.zip
           asset_content_type: application/zip
