--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -41,5 +41,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: dl-${{ steps.tag_version.outputs.new_tag }}.zip
-          asset_name: dl-${{ steps.tag_version.outputs.new_tag }}.zip
+          asset_name: dl-${{ steps.tag_version.outputs.new_tag }}-darwin-amd64.zip
           asset_content_type: application/zip
