--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -20,7 +20,7 @@ jobs:
           args: --release
       - name: Create Archive
         run: |
-          zip --junk-paths dl-${{ github.ref }}.zip target/release/dl
+          zip --junk-paths dl-darwin-amd64.zip target/release/dl
       - name: Bump Tag
         id: tag_version
         uses: mathieudutour/github-tag-action@v5
@@ -40,6 +40,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dl-${{ steps.tag_version.outputs.new_tag }}.zip
+          asset_path: dl-darwin-amd64.zip
           asset_name: dl-${{ steps.tag_version.outputs.new_tag }}-darwin-amd64.zip
           asset_content_type: application/zip
