--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -7,25 +7,36 @@ jobs:
   build:
     name: macOS 10.15
     runs-on: macos-10.15
+    needs: build
     steps:
       - uses: actions/checkout@v1
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
           toolchain: 1.47.0
+          components: cargo-bump
       - name: Compile
         uses: actions-rs/cargo@v1
         with:
           command: build
           args: --release
-      - name: Create Archive
-        run: |
-          zip --junk-paths dl-darwin-amd64.zip target/release/dl
-      - name: Bump Tag
+      - name: Calculate Tag
         id: tag_version
         uses: mathieudutour/github-tag-action@v5
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          dry_run: true
+      - name: Set Cargo Version
+        uses: actions-rs/cargo@v1
+        with:
+          command: bump 
+          args: ${{ steps.tag_version.outputs.new_tag }}
+      - name: Push Tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v5
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          custom_tag: ${{ steps.tag_version.outputs.new_tag }}
       - name: Create GitHub Release
         uses: actions/create-release@v1
         env:
@@ -33,6 +44,9 @@ jobs:
         with:
           tag_name: ${{ steps.tag_version.outputs.new_tag }}
           release_name: Release ${{ steps.tag_version.outputs.new_tag }}
+      - name: Create Archive
+        run: |
+          zip --junk-paths dl-darwin-amd64.zip target/release/dl
       - name: Upload Archive
         id: upload-release-asset 
         uses: actions/upload-release-asset@v1
