--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,8 +27,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: preview
-          release_name: Preview
+          tag_name: continuous-integration
+          release_name: Continuous Integration
           draft: true
           prerelease: true
       - name: Upload Release Asset
@@ -39,5 +39,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: dl-darwin-amd64.zip
-          asset_name: dl-preview-darwin-amd64-preview.zip
+          asset_name: dl-continuous-integration-darwin-amd64.zip
           asset_content_type: application/zip
