--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -21,7 +21,7 @@ jobs:
           command: build
           args: --release
       - name: Calculate Tag
-        id: tag_version
+        id: calculate_tag
         uses: mathieudutour/github-tag-action@v5
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -30,20 +30,20 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: bump 
-          args: ${{ steps.tag_version.outputs.new_tag }}
+          args: ${{ steps.calculate_tag.outputs.new_tag }}
       - name: Push Tag
-        id: tag_version
+        id: push_tag
         uses: mathieudutour/github-tag-action@v5
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          custom_tag: ${{ steps.tag_version.outputs.new_tag }}
+          custom_tag: ${{ steps.calculate_tag.outputs.new_tag }}
       - name: Create GitHub Release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.tag_version.outputs.new_tag }}
-          release_name: Release ${{ steps.tag_version.outputs.new_tag }}
+          tag_name: ${{ steps.push_tag.outputs.new_tag }}
+          release_name: Release ${{ steps.push_tag.outputs.new_tag }}
       - name: Create Archive
         run: |
           zip --junk-paths dl-darwin-amd64.zip target/release/dl
@@ -55,5 +55,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: dl-darwin-amd64.zip
-          asset_name: dl-${{ steps.tag_version.outputs.new_tag }}-darwin-amd64.zip
+          asset_name: dl-${{ steps.push_tag.outputs.new_tag }}-darwin-amd64.zip
           asset_content_type: application/zip
