--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -19,7 +19,7 @@ jobs:
           command: build
           args: --release
       - name: Calculate Tag
-        id: calculate_tag
+        id: calculate-tag
         uses: mathieudutour/github-tag-action@v5
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -34,31 +34,31 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: bump 
-          args: ${{ steps.calculate_tag.outputs.new_tag }}
+          args: ${{ steps.calculate-tag.outputs.new_tag }}
       - name: Push Tag
-        id: push_tag
+        id: push-tag
         uses: mathieudutour/github-tag-action@v5
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          custom_tag: ${{ steps.calculate_tag.outputs.new_tag }}
+          custom_tag: ${{ steps.calculate-tag.outputs.new_tag }}
       - name: Create GitHub Release
         uses: actions/create-release@v1
+        id: create-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.push_tag.outputs.new_tag }}
-          release_name: Release ${{ steps.push_tag.outputs.new_tag }}
+          tag_name: ${{ steps.push-tag.outputs.new_tag }}
+          release_name: Release ${{ steps.push-tag.outputs.new_tag }}
           tag_prefix: ''
       - name: Create Archive
         run: |
           zip --junk-paths dl-darwin-amd64.zip target/release/dl
       - name: Upload Archive
-        id: upload-release-asset 
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ steps.create-release.outputs.upload_url }}
           asset_path: dl-darwin-amd64.zip
-          asset_name: dl-${{ steps.push_tag.outputs.new_tag }}-darwin-amd64.zip
+          asset_name: dl-${{ steps.push-tag.outputs.new_tag }}-darwin-amd64.zip
           asset_content_type: application/zip
