--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -10,7 +10,7 @@ jobs:
     name: macOS 10.15
     runs-on: macos-10.15
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
@@ -65,13 +65,11 @@ jobs:
           asset_path: dl-darwin-amd64.zip
           asset_name: dl-${{ steps.push-tag.outputs.new_tag }}-darwin-amd64.zip
           asset_content_type: application/zip
-      - name: Update Formula
-        run: |
-          SHA=$(sha256sum target/release/dl)
-          URL=${{ steps.upload-archive.browser_download_url }}
-          sed -i "s/\${SHA}/${SHA}/g" Formula/dl.rb
-          sed -i "s/\${URL}/${URL}/g" Formula/dl.rb
-          cat Formula/dl.rb
-      - name: Test Formula
-        run:  |
-          brew audit --strict --new-formula --online Formula/dl.rb
+      - name: Trigger Homebrew Release
+        uses: peter-evans/repository-dispatch@v1
+        with:
+          token: ${{ secrets.REPO_ACCESS_TOKEN }}
+          repository: fraserdarwent/homebrew-dl
+          event-type: new-release
+          client-payload: '{"version": "${{ steps.push-tag.outputs.new_tag }}"}'
+          
